# rust-rest-rocket-diesel-postgres-jwt

./: .env  Cargo.toml  README.md  Rocket.toml  Rust-RestApi-Test.postman_collection.json  run-postgres.sh
migrations/00000000000000_diesel_initial_setup/2019-09-04-032641_create_users/: up.sql
migrations/00000000000000_diesel_initial_setup/2019-09-08-030820_make_default_posts/: up.sql
migrations/2019-09-04-032926_make_default_users/: up.sql
migrations/2019-09-08-030000_create_posts_table/: up.sql
src/: db.rs  main.rs  schema.rs
src/post/: mod.rs  model.rs
src/user/: auth.rs  mod.rs  model.rs
