[package]
name = "rust-rest-rocket-diesel-postgres-jwt"
version = "0.1.0"
authors = ["shodan"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
diesel = { version = "1.4.8", features = ["postgres"] }
jsonwebtoken = "8.1.1"
rust-argon2 = "1.0.0"
dotenv = "0.15.0"
blake2  = "0.10.6"
serde = "1.0.151"
serde_json = "1.0.90"
serde_derive = "1.0.151"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
[dependencies.uuid]
version = "1"
features = ["v4"]